# aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXTENDING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SETUP.md  TOKEN-EFFICIENCY.md  install.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-packages.yml  release-vsix.yml  test.yml
docs/: ARCHITECTURE.md  CHEATSHEET.md  RELEASING.md  TOOLS.md
extension/: README.md  extension.js  graph-view.html  package.json
extension/media/: NOTICE.md  edgehandles.min.js
payload/: copilot-instructions-snippet.md  engines.json  github-actions-aegis.yml  gitlab-ci-aegis.yml  install-hooks.sh  pull-index.sh
payload/.github/agents/: argus.agent.md  asclepius.agent.md  daedalus.agent.md  hephaestus.agent.md  hermes.agent.md  metis.agent.md  pythia.agent.md  themis.agent.md
payload/.github/skills/aegis-help/: SKILL.md
payload/.github/skills/change-impact-analysis/: SKILL.md
payload/.github/skills/codebase-orientation/: SKILL.md
payload/.github/skills/complex-task-breakdown/: SKILL.md
payload/.github/skills/event-contract-change/: SKILL.md
payload/.github/skills/feature-delivery-loop/: SKILL.md
payload/ariadne-node/: annotate.mjs  ast.mjs  db.mjs  docgen.mjs  enrich.mjs  graph_export.mjs  http.mjs  indexer.mjs  kafka.mjs  package-lock.json  package.json  scip_ingest.mjs  server.mjs  setup.mjs  trust.mjs
payload/ariadne-python/: annotate.py  ariadne_cli.py  ast_extract.py  bootstrap.py  db_extract.py  docgen.py  enrich.py  graph_export.py  http_extract.py  indexer.py  kafka_extract.py  pyproject.toml  requirements.txt  scip_ingest.py  scip_pb2.py  server.py  setup.py  trust.py
payload/extensions-samples/: eventbus.extract.mjs  eventbus.extract.py  spring-cloud-stream.extract.mjs  spring-cloud-stream.extract.py  todo.pass.mjs  todo.pass.py  todo.tool.mjs  todo.tool.py
scripts/: prepare-github.sh
tests/: bench.py  run_tests.py
(+12 files in other folders)
